# -------------------------------------------------------------------------------- build system requirements
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# -------------------------------------------------------------------------------- project metadata
[project]
name = "taskshed"
version = "0.9.0"
authors = [
  { name = "Jacob Strauss", email = "jacob@chaselabs.ai" }
]
description = "A high-performance, asynchronous, ready for production task scheduling framework written in Python."
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "task scheduling",
    "job scheduling",
    "scheduler",
    "cron",
    "background jobs",
    "background tasks",
    "periodic tasks",
    "recurring tasks",
    "asyncio",
    "asynchronous",
    "distributed",
    "worker",
    "queue",
    "redis",
    "mysql"
]
license = { text = "MIT" }
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14"
]
dependencies = []

# -------------------------------------------------------------------------------- urls
[project.urls]
"Homepage" = "https://github.com/Chase-Labs/taskshed"
"Documentation" = "https://chase-labs.github.io/taskshed/"
"Bug Tracker" = "https://github.com/Chase-Labs/taskshed/issues"

# -------------------------------------------------------------------------------- optional dependencies
[project.optional-dependencies]
mysql = [
    "aiomysql>=0.3.2",
]
redis = [
    "redis>=5.0.1",
]
all = [
    "taskshed[mysql,redis]"
]

# -------------------------------------------------------------------------------- dev / test dependencies
[dependency-groups]
dev = [
    "aiomysql>=0.3.2",
    "apscheduler>=3.11.2",
    "arq>=0.28.0",
    "redis>=5.0.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.2.2",
    "rq-scheduler>=0.14.0",
    "SQLAlchemy>=2.0.51",
]

# -------------------------------------------------------------------------------- dependencies
[tool.setuptools.packages.find]
where = ["src"]
